# blog-webserver

./: .gitignore  Cargo.toml  data.json
.cargo/: config.toml
migration/: 01_blog_data.sql  01_blog_tables.sql
migrations/: 01__initial.sql  01_blog_tables.sql
src/: error.rs  main.rs  store.rs
src/routes/: blogs.rs  home.rs  mod.rs
src/types/: blog.rs  comment.rs  mod.rs
src/utils/: arguments.rs  input.rs  migration.rs  mod.rs  panics.rs  setting.rs
