[package]
name = "blog-webserver"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1" , features = ["full"]}
axum = { version = "0.8.0", features = ["tracing"]}
tower = "0.5.0"
tower-http = {version = "0.6.0", features = ["cors", "trace"]}
chrono = { version = "0.4.0", features = ["unstable-locales", "serde"] }
serde = { version = "1", features = ["derive", "rc"]}
serde_json = "1"
sqlx = { version = "0.8.0", features = [ "runtime-tokio-rustls", "migrate", "postgres", "chrono" ] } 
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
clap = { version = "4.4.2", features = ["cargo"] }
config = {version = "0.14.0", features = ["toml"] }
toml = {version = "0.8", features = ["display"]}
owo-colors = "4.1.0"
anyhow = "1.0.0"